# Steam-Recommender

./: .dockerignore  Dockerfile  Dockerfile.gpu  Makefile  README.md  app.py  docker-compose.gpu.yml  docker-compose.yml  pyproject.toml
src/: api.py  db.py  scrapping.py
src-front/: app.py  streamlit_app.py
