[tool.poetry]
name = "steamdb-rag"
version = "0.1.0"
description = "Recommender system for Steam games"
authors = ["rayanramoul <raysamram@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.34.0"
langchain = "^0.1.17"
torch = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
