[project]
name = "steamdb-rag"
version = "0.1.0"
description = "Recommender system for Steam games"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "rayanramoul", email = "raysamram@gmail.com" }]
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
   "langchain>=0.2.10",
   "langchain-community>=0.2.10",
  "langchain-text-splitters>=0.2.0",
   "langchain-chroma>=0.1.0",
   "langchain-huggingface>=0.1.0",
   "chromadb>=0.5.0",
   "sentence-transformers>=2.7.0",
  "torch>=2.3.0",
  "loguru>=0.7.2",
  "tqdm>=4.66.4",
  "streamlit>=1.34.0",
  "schedule>=1.2.1",
  "tenacity>=8.3.0",
  "pandas>=2.2.0",
  "requests>=2.31.0",
]
